src/test/ui/parser/issue-58856-1.stderr
error: expected one of `)`, `,`, or `:`, found `>`
  --> $DIR/issue-58856-1.rs:3:14
   |
LL |     fn b(self>
   |         -    ^ help: `)` may belong here
   |         |
   |         unclosed delimiter

error: expected one of `->`, `;`, `where`, or `{`, found `>`
  --> $DIR/issue-58856-1.rs:3:14
   |
LL | impl A {
   |        - while parsing this item list starting here
LL |
LL |     fn b(self>
   |              ^ expected one of `->`, `;`, `where`, or `{`
...
LL | }
   | - the item list ends here

error[E0412]: cannot find type `A` in this scope
  --> $DIR/issue-58856-1.rs:1:6
   |
LL | impl A {
   |      ^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0412`.
